compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__patterns__alternative_patterns2.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/patterns.rs
assertion_line: 38
expression: "\npub fn main() {\n    let duplicate_name = 1\n\n    case 1 {\n        1 | 2 if duplicate_name == 1 -> duplicate_name\n        _ -> 0\n    }\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
    let duplicate_name = 1

    case 1 {
        1 | 2 if duplicate_name == 1 -> duplicate_name
        _ -> 0
    }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    Duplicate_name = 1,
    case 1 of
        1 when Duplicate_name =:= 1 ->
            Duplicate_name;

        2 when Duplicate_name =:= 1 ->
            Duplicate_name;

        _ ->
            0
    end.
