compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__patterns__string_prefix_as_pattern_with_multiple_subjects_and_guard.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/patterns.rs
assertion_line: 94
expression: "pub fn a(x) {\n  case x, x {\n    _, \"a\" as a <> rest if rest == \"a\" -> a\n    _, _ -> \"a\"\n  }\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn a(x) {
  case x, x {
    _, "a" as a <> rest if rest == "a" -> a
    _, _ -> "a"
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([a/1]).

-file("project/test/my/mod.gleam", 1).
-spec a(binary()) -> binary().
a(X) ->
    case {X, X} of
        {_, <<"a"/utf8, Rest/binary>>} when Rest =:= <<"a"/utf8>> ->
            A = <<"a"/utf8>>,
            A;

        {_, _} ->
            <<"a"/utf8>>
    end.
